Add RELEASE upgrade strategy and version-age category.